deployments/multi-svc.yml
---
apiVersion: v1
kind: Service
metadata:
   name: s1
spec:
   type: NodePort
   ports:
    - name: http-port-80
      port: 80
    - name: http-port-8080
      port: 8080
    - name: http-port-8081
      port: 8081
   selector:
      version: v1
...
